# BoardForge

./: .gitignore  README.md  pyproject.toml
boards/: qemu-virt-rv32.yaml  renode-rv32-virt.yaml
docs/: architecture.md
examples/qemu-virt-rv32/: boardforge.toml  linker.ld
examples/renode-rv32-virt/: Makefile  boardforge.toml  hello_uart.S
src/boardforge/: __init__.py  app.py  backends.py  boards.py  cli.py  core.py  engine.py  qemu.py  renode.py
tests/: test_backends.py  test_boards.py  test_catalog_builtin_boards.py  test_cli.py  test_engine.py  test_qemu.py  test_renode.py
